# dockyard_rl

./: .gitignore  .mailmap  CLAUDE.md  LICENSE  NOTICE  README.md  __init__.py  hardware-deferred-validation.md  pyproject.toml  pyrightconfig.json  ray.sub
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml
algorithms/: advantage_estimator.py  distillation.py  distillation_memory.py  dpo.py  dpo_evals.py  grpo.py  logits_sampling_utils.py  online_dpo.py  opd.py  reward_functions.py  rlaif.py  rm.py  sft.py  utils.py
algorithms/async_utils/: __init__.py  interfaces.py  replay_buffer.py  trajectory_collector.py
algorithms/loss/: __init__.py  interfaces.py  loss_functions.py  utils.py  wrapper.py
algorithms/x_token/: __init__.py  loss_utils.py  token_aligner.py  utils.py
cluster/: __init__.py  bootstrap.py  fleet.py  placement.py
data/: __init__.py  chat_templates.py  collate_fn.py  cross_tokenizer_collate.py  dataloader.py  interfaces.py  llm_message_utils.py  multimodal_utils.py  processors.py  utils.py
data/datasets/: __init__.py  gdpval.py  hle.py  processed_dataset.py  program_bench.py  raw_dataset.py  swe_bench.py  swe_bench_pro.py  terminal_bench.py  utils.py
data/packing/: __init__.py  algorithms.py  metrics.py  packing.py
data_plane/: __init__.py  codec.py  column_io.py  factory.py  interfaces.py  observability.py  preshard.py  schema.py  worker_mixin.py
data_plane/adapters/: __init__.py  noop.py  transfer_queue.py
distributed/: __init__.py  batched_data_dict.py  model_utils.py  named_sharding.py  stateless_process_group.py  virtual_cluster.py  worker_groups.py  worker_groups_utils.py
docs/: Makefile  README.md  conf.py  glossary.md  index.md  requirements.txt
docs/_templates/: page.html
docs/architecture/: cluster-and-fleets.md  data-plane.md  index.md  overview.md  weight-sync.md
docs/deployment/: hardware-validation.md  index.md  kubernetes.md  slurm.md
docs/design-docs/: distillation.md  dpo.md  (+8 more)
environments/: _gdpval_extract.py  code_environment.py  code_jaccard_environment.py  dapo_math_verifier.py  gdpval_agentic_environment.py  gdpval_environment.py  hle_environment.py  interfaces.py  math_environment.py  metrics.py  multi_turn_session_env.py  program_bench_environment.py  retriever.py  reward_model_environment.py  rewards.py  terminal_bench_environment.py  utils.py  vlm_environment.py
evals/: __init__.py  answer_parsing.py
examples/: run_distillation.py  run_dpo.py  run_eval.py  run_grpo_swe.py  run_online_dpo.py  run_rlaif.py  run_rm.py  run_sft.py
experience/: rollouts.py
infra/: README.md
infra/dockyard_k8s/: README.md  pyproject.toml
infra/dockyard_k8s/examples/: grpo_swe.infra.yaml  grpo_swe_sglang.infra.yaml
infra/dockyard_k8s/scripts/: validate-manifests.sh
infra/dockyard_k8s/src/dockyard_k8s/: __init__.py  _logging.py  _retry.py  cli.py  config.py  dev.py  inspect.py  k8s.py  manifest.py  orchestrate.py  rayjob.py  render.py  schema.py  submit.py  workdir.py
infra/dockyard_k8s/src/dockyard_k8s/defaults/: defaults.example.yaml
infra/dockyard_k8s/src/dockyard_k8s/submitters/: __init__.py  exec_.py  portforward.py
infra/dockyard_k8s/tests/: conftest.py
infra/dockyard_k8s/tests/unit/: test_cli.py  test_config.py  test_dev.py  test_dra.py  test_inspect.py  test_k8s.py  test_kubeconform.py  test_manifest.py  test_orchestrate.py  test_rayjob.py  test_render.py  test_schema.py  test_submit.py  test_submitters.py  test_workdir.py
modelopt/: registry.py  utils.py
models/: __init__.py
rewards/: compiler.py  diff_utils.py  gdpval_rubric.py  hle_grader.py  integrity.py  interfaces.py  invalid_action.py  program_bench.py  swe_bench_pro.py  terminal_bench.py  test_runner.py
sandbox/: __init__.py  task_executor_client.py
scripts/: quantize_model.py
tests/: conftest.py
tool_protocol/: __init__.py  hermes.py  protocol.py  registry.py  schema.py
ubuntu-base/: pyproject.toml  tests-and-upgrades.txt  ubuntu-swe-gdpval.dockerfile  ubuntu-swe-sglang.dockerfile  ubuntu-swe-v2.dockerfile
ubuntu-base/config/: logind.conf  supervisord.conf
ubuntu-base/config/systemd/: supervisord.service  task-executor.service
ubuntu-base/scripts/tools/: check_env_fingerprint.sh  generate_env_fingerprint.py  prewarm_rl_venv.sh  start-task-executor.sh  task_executor.py
utils/: __init__.py  checkpoint.py  config.py  gguf_export.py  logger.py  memory_tracker.py  native_checkpoint.py  nsys.py  nvml.py  packed_tensor.py  timer.py
weight_sync/: __init__.py  collective_weight_synchronizer.py  factory.py  http_weight_synchronizer.py  interfaces.py  ipc_weight_synchronizer.py
(+278 files in other folders)
