[project]
name = "ubuntu-swe-rl-env"
version = "0.1.0"
description = "AI Agent SWE RL Environment dependencies"
requires-python = ">=3.12"
dependencies = [
    # Task Executor API
    "flask",
    "waitress",
    # gRPC / agent controller compat
    "grpcio",
    "grpcio-tools",
    "click",
    "PyJWT",
    "psutil",
    "pyyaml",
    # Test frameworks
    "pytest",
    "pytest-xdist",
    # Python linters & type checkers
    "ruff",
    "mypy",
    "flake8",
    "pylint",
    # Distributed RL orchestration
    "ray[default]",
    # JAX Ecosystem
    "jax[cuda12]",
    "flax",
    "optax",
    "orbax-checkpoint",
    "rlax",
    "chex",
    "einops",
    # PyTorch & Inference
    # Pinned to match the ubuntu-swe image build (ubuntu-swe-v2.dockerfile §5c):
    # the cuda13.2 base installs the cu130 torch build and vLLM 0.22.0 on top.
    "torch==2.11.0",
    "torchvision==0.26.0",
    "torchaudio==2.11.0",
    "vllm==0.22.0"
]

# Fetch PyTorch from the cu130 wheel index — matches the cuda13.2 image base and
# gives native Blackwell (sm_100/sm_103) kernels the old cu124 build could not.
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }